vpc.tf
#VPC setting

resource "aws_vpc" "my_vpc" {
  cidr_block = "10.0.0.0/16"


  tags = {
    Name = "ETVL"
  }
}
